[package]
name = "songacha"
version = "0.1.0"
edition = "2024"
authors = ["Yoshiki Hasegawa"]
description = "A CLI song gacha tool using Perfume songs as sample data."
license = "MIT"
repository = "https://github.com/yoshiki830/songacha"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
